alterar em testes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,6 @@ spring.datasource.username=sa
 # Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-#create
 
 #Cache segundo nivel
 spring.jpa.properties.hibernate.cache.use_second_level_cache=true
@@ -19,3 +18,7 @@ spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.e
 spring.jpa.properties.javax.persistence.sharedCache.mode=ENABLE_SELECTIVE
 spring.jpa.properties.hibernate.cache.default_cache_concurrency_strategy=READ_WRITE
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#
+# JCache configuration (example with ehcache 3).
+#
+spring.cache.jcache.config=ehcache3.xml
