--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 		    <artifactId>spring-context-support</artifactId>
 		</dependency>
 		
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		</dependency>
 	</dependencies>
 
 	<build>
