--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 # JCache configuration (example with ehcache 3).
 #
 spring.cache.jcache.config=ehcache3.xml
+
+logging.level.org.hibernate.ehcache=DEBUG
+logging.level.net.sf.ehcache=DEBUG
